# XDP

./: .gitmodules  README.md
.github/workflows/: xdp-board-test.yml  xdp-xrt-build.yml
ci/board/edge/: xdp_edge_board_exec.sh
ci/board/ve2/: xdp_ve2_board_exec.sh
ci/board/ve2/tests/: 01_xrt_smi_version.sh  02_xrt_smi_examine.sh  03_xrt_smi_validate.sh  04_xdp_smoke.sh
ci/csr/: config.defaults.sh  generate_csr_run.sh  limit_merged_tql.sh  patch_merged_tql.sh  patch_merged_tql_no_docker.sh  run_ve2_board_test.sh  stage_ve2_rpms.sh  submit_csr_jenkins.sh  submit_csr_local.sh
ci/ve2/: ensure_yocto_cache.sh
profile/: CMakeLists.txt
profile/database/: dynamic_event_database.cpp  dynamic_event_database.h  static_info_database.cpp  static_info_database.h
profile/database/dynamic_info/: aie_db.h  device_db.h  samples.h
profile/database/parser/: json_parser.cpp  json_parser.h  metrics.cpp  metrics.h  metrics_collection.cpp  metrics_collection.h  metrics_collection_manager.cpp  metrics_collection_manager.h  metrics_factory.h  metrics_type.h  parser_utils.cpp  parser_utils.h
profile/database/static_info/: aie_constructs.h  device_info.cpp  device_info.h  xclbin_info.cpp  xclbin_info.h
profile/database/static_info/filetypes/: aie_control_config_filetype.cpp  aie_trace_config_filetype.cpp  aie_trace_config_v3_filetype.cpp
profile/device/: pl_device_intf.cpp
profile/device/aie_trace/: aie_trace_offload.cpp
profile/device/aie_trace/client/: aie_trace_offload_client.cpp  aie_trace_offload_client.h
profile/device/aie_trace/ve2/: aie_trace_offload_ve2.cpp  aie_trace_offload_ve2.h
profile/device/common/: aie_driver_common_util.cpp  client_transaction.cpp  xdp_aie_driver.h
profile/device/common/transactions/: op_init.hpp  op_types.h
profile/device/common/ve2/: ve2_transaction.cpp  ve2_transaction.h
profile/plugin/: CMakeLists.txt
profile/plugin/aie_base/: aie_base_util.h
profile/plugin/aie_debug/: CMakeLists.txt  aie_debug_metadata.h
profile/plugin/aie_debug/client/: aie_debug.h
profile/plugin/aie_debug/edge/: aie_debug.h
profile/plugin/aie_debug/ve2/: aie_debug.h
profile/plugin/aie_dtrace/: CMakeLists.txt  aie_dtrace_cb.cpp  aie_dtrace_cb.h  aie_dtrace_impl.h  aie_dtrace_metadata.cpp  aie_dtrace_metadata.h  aie_dtrace_plugin.cpp  aie_dtrace_plugin.h
profile/plugin/aie_dtrace/util/: aie_dtrace_util.cpp  aie_dtrace_util.h
profile/plugin/aie_dtrace/ve2/: aie_dtrace_ct_writer.cpp  aie_dtrace_ct_writer.h  aie_dtrace_ve2.cpp  aie_dtrace_ve2.h  elf_helper.cpp  elf_helper.h
profile/plugin/aie_halt/: CMakeLists.txt
profile/plugin/aie_halt/clientDev/: aie_halt.cpp
profile/plugin/aie_pc/: CMakeLists.txt
profile/plugin/aie_pc/clientDev/: aie_pc.cpp  aie_pc.h
profile/plugin/aie_profile/: CMakeLists.txt  aie_profile_cb.h  aie_profile_impl.h  aie_profile_metadata.cpp  aie_profile_metadata.h  aie_profile_metadata_json.cpp  aie_profile_plugin.cpp
profile/plugin/aie_profile/client/: aie_profile.h
profile/plugin/aie_profile/edge/: aie_profile.cpp  aie_profile.h
profile/plugin/aie_profile/util/: aie_profile_config.cpp  aie_profile_config.h  aie_profile_util.h
profile/plugin/aie_profile/ve2/: aie_profile.cpp  aie_profile.h  elf_helper.cpp  elf_helper.h
profile/plugin/aie_status/: CMakeLists.txt  aie_status_plugin.h
profile/plugin/aie_trace/: CMakeLists.txt  aie_trace_metadata.cpp  aie_trace_metadata.h  aie_trace_metadata_json.cpp  aie_trace_offload_manager.cpp  aie_trace_offload_manager.h  aie_trace_plugin.cpp  aie_trace_plugin.h
profile/plugin/aie_trace/client/: aie_trace.h
profile/plugin/aie_trace/edge/: aie_trace.cpp
profile/plugin/aie_trace/util/: aie_trace_util.h
profile/plugin/aie_trace/ve2/: aie_trace.cpp  aie_trace.h
profile/plugin/device_offload/: device_offload_plugin.cpp  device_offload_plugin.h
profile/plugin/device_offload/hal/: hal_device_offload_plugin.cpp
profile/plugin/device_offload/hw_emu/: hw_emu_device_offload_plugin.cpp
profile/plugin/device_offload/opencl/: opencl_device_info_plugin.cpp
profile/plugin/ml_timeline/: ml_timeline_plugin.cpp
profile/plugin/ml_timeline/clientDev/: ml_timeline.cpp
profile/plugin/ml_timeline/ve2/: ml_timeline.cpp
profile/plugin/vp_base/: info.h
profile/writer/aie_trace/: aie_trace_timestamps_writer.cpp  aie_trace_writer.cpp
